# OdooLocust

./: MANIFEST  README.md  licence.txt  pyproject.toml  requirements.txt  setup.py  test.py  test_sale.py
.github/workflows/: python-package.yml
OdooLocust/: OdooLocust.py  OdooLocustUser.py  OdooTaskSet.py  __init__.py
OdooLocust/samples/: Seller.py  SellerTaskSet.py  locust.conf  sample_test.py
src/OdooLocust/: OdooLocustUser.py  OdooTaskSet.py  __init__.py
src/OdooLocust/crm/: __init__.py  lead.py  partner.py  quotation.py
src/OdooLocust/samples/: Seller.py
