[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "OdooLocust"
version = "2.0.0"
description='Easily load test Odoo using Locust and odoolib.'
authors=[
  {name = 'Nicolas Seinlet', email = 'nse@odoo.com'},
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["licence.txt"]
dependencies = [
     'odoo-client-lib>=2.0.1',
     'locust>=2.43.3',
     'names>=0.3.0',
]
requires-python = ">= 3.9"
keywords = ["odoo", "library", "communication", "rpc", "xml-rpc", "net-rpc", "xmlrpc", "python", "client", "lib", "web", "service"]
